--- a/index.html
+++ b/index.html
@@ -24,8 +24,21 @@
             <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero">Hire Me</a>
         </div>
         <div class="half-width"><img src="images/jhankar.png">
-            <img src="images/top-banner.png">
+            -
         </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="">Download image</a>
+        </div>
+
     </section>
 
 
